<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VOSK Live Subtitle</string>
    <string name="recognize_file">Recognize File</string>
    <string name="recognize_microphone">Recognize Microphone</string>
    <string name="stop_microphone">Stop Microphone</string>
    <string name="preparing">Preparing the recognizer\n</string>
    <string name="ready">Ready\n</string>
    <string name="failed">Failed to init recognizer %s\n</string>
    <string name="elapsed">Result %s elapsed %d milliseconds\n</string>
    <string name="starting">Starting\n</string>
    <string name="say_something">Say something\n</string>
    <string name="stop_file">Stop File</string>
    <string name="pause">Pause</string>
    <string name="continueRecognition">Continue</string>
    <string name="voice_language">Voice Language</string>
    <string name="spinner_src_languages">spinner_src_languages</string>
    <string name="translation_language">Translation Language</string>
    <string name="spinner_dst_languages">spinner_dst_languages</string>
    <string name="toggle_overlay">Toggle Overlay\n(ON/OFF)</string>
    <string name="download_model">Download Model</string>
    <string name="delete_model">Delete Model</string>
    <string name="recognized_words">Recognized words</string>
    <string name="debug_mode">Debug mode</string>
</resources>
