<!--?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/center"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/-->

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="1dp"
    android:fillViewport="false"
    >
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="1dp"
        android:paddingRight="1dp"
        android:paddingTop="1dp"
        android:paddingBottom="1dp"
        tools:context=".MainActivity"
        >
        <TextView
            android:id="@+id/textview_text1"
            android:textAlignment="gravity"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/voice_language"
            />
        <Spinner
            android:id="@+id/spinner_src_languages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:contentDescription="@string/spinner_src_languages"
            android:backgroundTint="@color/colorPrimary"
            android:gravity="center"
            android:minHeight="48dp"
            android:spinnerMode="dropdown"
            android:textAlignment="gravity"
            />
        <TextView
            android:id="@+id/textview_src"
            android:textAlignment="gravity"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            />
        <Button
            android:id="@+id/button_delete_model"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/delete_model"
            android:visibility="invisible"
            />
        <Button
            android:id="@+id/button_download_model"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/download_model"
            android:visibility="invisible"
            />
        <ProgressBar
            android:id="@+id/mProgressBar"
            android:max="100"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            />
        <TextView
            android:id="@+id/textview_model_URL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAlignment="gravity"
            android:textSize="12sp"
            android:visibility="invisible"
            />
        <TextView
            android:id="@+id/textview_model_zip_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAlignment="gravity"
            android:textSize="12sp"
            android:visibility="invisible"
            />
        <TextView
            android:id="@+id/textview_filesize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAlignment="gravity"
            android:textSize="12sp"
            android:visibility="invisible"
            />
        <TextView
            android:id="@+id/textview_bytesdownloaded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAlignment="gravity"
            android:textSize="12sp"
            android:visibility="invisible"
            />
        <TextView
            android:id="@+id/textview_downloaded_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAlignment="gravity"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/textview_model_used_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAlignment="gravity"
            android:textSize="12sp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="12sp"
            />
        <EditText
            android:id="@+id/voice_text"
            android:layout_width="match_parent"
            android:layout_height="124dp"
            android:autofillHints=""
            android:gravity="center"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:hint="@string/recognized_words"
            android:maxLines="3"
            android:textSize="18sp"
            android:textAlignment="gravity"
            android:textColorHint="#616161"
            tools:ignore="LabelFor,TextFields"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="12sp"
            />
        <TextView
            android:id="@+id/textview_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/translation_language"
            android:textAlignment="gravity"
            android:textSize="18sp"
            />
        <Spinner
            android:id="@+id/spinner_dst_languages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:contentDescription="@string/spinner_dst_languages"
            android:backgroundTint="@color/colorPrimary"
            android:gravity="center"
            android:minHeight="48dp"
            android:spinnerMode="dropdown"
            android:textAlignment="gravity"
            />
        <TextView
            android:id="@+id/textview_dst"
            android:textAlignment="gravity"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="12sp"
            />
        <Button
            android:id="@+id/button_toggle_overlay"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/toggle_overlay"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="12sp"
            />
        <TextView
            android:id="@+id/textview_recognizing"
            android:textAlignment="gravity"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="14sp"
            />
        <TextView
            android:id="@+id/textview_overlaying"
            android:textAlignment="gravity"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            />
        <TextView
            android:id="@+id/textview_debug"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:scrollbars="vertical"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />
        <TextView
            android:id="@+id/textview_debug2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:scrollbars="vertical"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />
    </TableLayout>
</ScrollView>
<!--/androidx.constraintlayout.widget.ConstraintLayout-->
